# attractor

./: .gitignore  CMakeLists.txt  main.cpp
resource/: qtquickcontrols2.conf
src/: Attractor.cpp  AttractorSystems.cpp  ColorModel.cpp  ColorViewModel.cpp  Gradient.cpp  ParameterListModel.cpp  ParameterModel.cpp  PointCloud.cpp  Vertex.cpp  ViewModel.cpp
src/include/: Attractor.h  Attractor.inl  AttractorData.h  AttractorSystems.h  ColorModel.h  ColorViewModel.h  Gradient.h  ParameterListModel.h  ParameterModel.h  PlatformHelper.h  PointCloud.h  Vertex.h  ViewModel.h  helpers.h
ui/: Main.qml
ui/components/: AccordionItem.qml  GradientRectangle.qml
